# extra_skills_mcp_tools

./: .gitignore  BEST_CODING_AGENT_LLM_GUIDE.md  Dockerfile  ESSENTIAL_MCP_SERVERS.md  JAN_MODEL_REPORT.md  MCP_PERFORMANCE_REPORT.md  MCP_PERFORMANCE_REPORT_JAN.md  MODEL_COMPARISON_REPORT.md  OPTIMIZATION_GUIDE.md  README.md  TOKEN_OPTIMIZATION.md  claude_code_mcp.json  docker-compose.firecrawl.yml  docker-compose.local.yml  docker-compose.pi5.yml  docker-compose.remote.yml  docker-compose.yml  install-claude-code.sh  install.sh  mcp_performance_test.py  model_comparison.py  pyproject.toml  start-local.sh  start-pi5.sh  start-remote.sh  start.sh  stop.sh
docker/: DEPLOY.md
docker/litellm-config/: config.yaml
docker/nginx/: nginx.conf
docker/nginx/certs/: README.md
docker/nginx/conf.d/: api.conf  scrape.conf  search.conf
docker/searxxng-template/: limiter.toml.example  settings.yml.example
pet-shop/: COMPLETE_PERFORMANCE_REPORT.md  MCP_TASK_REDUCTION.md  PET_SHOP_PERFORMANCE_REPORT.md  index.html
portfolio-sridhar/: PORTFOLIO_PERFORMANCE_REPORT.md  index.html
src/mcp_server/: __init__.py  __main__.py  server.py
src/mcp_server/schemas/: tool_schemas.py  trimmed_tool_schemas.py
src/mcp_server/security/: command_validator.py  sandbox.py
src/mcp_server/tools/: antd_charts.py  browserbase.py  code_sandbox.py  context_mode.py  engi_intelligence.py  fetch_web_content.py  file_system.py  firecrawl.py  freedium_scrape.py  github.py  gpt_researcher.py  hackernews.py  huggingface.py  lazy_tools.py  markitdown.py  searxng.py  (+12 more)
tests/: test_suite.py  verify.py
(+4 files in other folders)
