[project]
name = "mcp-server"
version = "0.1.0"
description = "API-free MCP server for local LLM tool access"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "readability-lxml>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.50.0",
    "scrapling>=0.4.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
mcp-server = "mcp_server.server:run"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
